# llms-with-pointers

./: .env.example  .gitignore  README.md  TODO.md  example.json  main.py  notebook.ipynb  pyproject.toml
pointer_generator_llama/: main.py
scripts/: divergence.py  eval.ps1  metrics.py  rename.py  results.py  rogue.ps1  rogue.py  test.ps1
src/: args.py  batcher.py  config.py  constants.py  dataset.py  eval.py  llama.py  main.py  model.py  test.py  train.py  transform.py  utils.py
src/utils/: __init__.py  divergence_utils.py  llama_util.py  llama_utils.py  metrics_utils.py  results_utils.py  tensor_utils.py
tests/: __init__.py  test_divergence_utils.py  test_llama.py  test_llama_utils.py  test_tensor_utils.py  test_utils.py
