[tool.black]
line-length = 120

[tool.poetry]
name = "pointer-generator-llama"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Aditya Mayukh Som <adi.kg2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = { version = "~2.5.0+cu124", source = "pytorch-gpu" }
torchaudio = { version = "~2.5.0+cu124", source = "pytorch-gpu" }
torchvision = { version = "~0.20.0+cu124", source = "pytorch-gpu" }
datasets = "~3.0.1"
transformers = "~4.45.2"
accelerate = "~1.0.1"
peft = "~0.13.2"
trl = "~0.11.4"
bitsandbytes = "~0.44.1"
wandb = "^0.18.3"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
torchdata = "~0.8.0"
tfrecord = { extras = ["torch"], version = "^1.14.5" }
tabulate = "^0.9.0"
pandas = "^2.2.3"
rouge-score = "^0.1.2"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
